init special baum-welch

--- a/KhomutovTaskBeatifulOne.ipynb
+++ b/KhomutovTaskBeatifulOne.ipynb
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1689,13 +1689,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "После тренировке на 300 бросках, алгоритм смог равномерно раскидать выпадающие значения на кубиках, а так же смог уловить общую тенденцию в переходах между кубиками, но не смог выделить нечестный кубик."
+    "После тренировке на 300 бросках, алгоритм смог равномерно раскидать выпадающие значения на кубиках, а так же смог уловить общую тенденцию в переходах между кубиками (проще остаться с этим же кубиком, чем перейти), и в общих чертах смог выделить нечестный кубик."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1730,7 +1732,321 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "На 1000 бросках происходит накопление ошибки, что ведет к переполнению переменных. Возможным решением проблемы может служить дополнительная нормировка, но я не знаю как ее сделать."
+    "На 1000 бросках происходит накопление ошибки, что ведет к переполнению переменных.\n",
+    "Сделаем нормированную версию алгоритма"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiply(array):\n",
+    "    result = 1\n",
+    "    for i in array:\n",
+    "        result *= i\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BaumWelchTrainigScaled(parametrs, PosteriorDecodingScaled):\n",
+    "    def __init__(self, data):\n",
+    "\n",
+    "        PosteriorDecoding.__init__(self, data)\n",
+    "        parametrs.__init__(self, data)\n",
+    "\n",
+    "        self.epselon = 0.1\n",
+    "        self.iterationNumber = 100\n",
+    "            \n",
+    "    def __call__(self):\n",
+    "        if self.isFitted == False: self.initializationBaumWelch()\n",
+    "        pprint.pprint('FITTED')\n",
+    "        pprint.pprint('Parametrs')\n",
+    "        pprint.pprint('TransitionsProbability: {}'.format(self.transitionsProbability))\n",
+    "        pprint.pprint('diceValueProbability: {}'.format(self.diceValueProbability))\n",
+    "    \n",
+    "    def initializationBaumWelch(self):\n",
+    "        prLog = 1000000000\n",
+    "        for step in range(self.iterationNumber):\n",
+    "            self.scaledConstF = []\n",
+    "            self.scaledConstB = []\n",
+    "            self.initialization()\n",
+    "            \n",
+    "            # Change paramets\n",
+    "            self.changeParametrs()\n",
+    "            currentLog = self.logLikelihood()\n",
+    "            #print(currentLog)\n",
+    "            if abs(currentLog - prLog) < self.epselon:\n",
+    "                print('Log doesnot change: stop in {} iteration'.format(step))\n",
+    "                break\n",
+    "            prLog = currentLog\n",
+    "        else:\n",
+    "            print('Stop: max iterations')\n",
+    "    \n",
+    "    \n",
+    "    def logLikelihood(self):\n",
+    "        return np.log(self.pathProbability)\n",
+    "\n",
+    "    def coeff(self,currentI):\n",
+    "        # трюк чтобы не терять точность\n",
+    "        ###\n",
+    "        coeff_num = 1\n",
+    "        for backCoeff, forwardCoeff in zip(self.scaledConstB[currentI+1:],self.scaledConstF[currentI:]):\n",
+    "            coeff_num *= backCoeff/forwardCoeff\n",
+    "        return coeff_num\n",
+    "    \n",
+    "    def changeParametrs(self):\n",
+    "        # Add A\n",
+    "        A = {}\n",
+    "        for fromI, fromState in enumerate(self.states):\n",
+    "            A[fromState] = {}\n",
+    "            for newI, newState in enumerate(self.states):\n",
+    "                sum_step = [\n",
+    "                    self.f[i][fromI] * self.b[i+1][newI] * \n",
+    "                    self.diceValueProbability[newState][self.data[i+1] - 1] * self.coeff(i)\n",
+    "                    for i in range(self.L-1)\n",
+    "                ]\n",
+    "                probability = sum(sum_step) * self.transitionsProbability[fromState][newI]/self.pathProbability\n",
+    "                A[fromState][newState] = probability\n",
+    "        # Add B\n",
+    "        \n",
+    "        \n",
+    "        B = {}\n",
+    "        for index, state in enumerate(self.states):\n",
+    "            B[state] = [.0,.0,.0,.0,.0,.0]\n",
+    "            for i,value in enumerate(self.data):\n",
+    "                B[state][value - 1] =+ self.f[i][index] * self.b[i][index] * multiply(self.scaledConstF[:i + 1]) * multiply(self.scaledConstB[i:])\n",
+    "        \n",
+    "        #pprint.pprint(A)\n",
+    "        #pprint.pprint(B)\n",
+    "        # change\n",
+    "        fair = A['F']['F'] + A['F']['U']\n",
+    "        unfair = A['U']['F'] + A['U']['U']\n",
+    "        \n",
+    "        self.transitionsProbability = {\n",
+    "            'F': np.array([A['F']['F'] /fair  , A['F']['U']/fair]), # to F, to U\n",
+    "            'U': np.array([A['U']['F'] /unfair, A['U']['U']/unfair]) # to F, to U\n",
+    "        }\n",
+    "        \n",
+    "        fair = sum(B['F'])\n",
+    "        unfair = sum(B['U'])\n",
+    "        \n",
+    "        self.diceValueProbability = {\n",
+    "            'F': [value/fair for value in B['F']],\n",
+    "            'U': [value/unfair for value in B['U']]\n",
+    "        }\n",
+    "        \n",
+    "        #pprint.pprint(self.transitionsProbability)\n",
+    "        #pprint.pprint(self.diceValueProbability)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log doesnot change: stop in 2 iteration\n",
+      "'FITTED'\n",
+      "'Parametrs'\n",
+      "(\"TransitionsProbability: {'F': array([0.75602829, 0.24397171]), 'U': \"\n",
+      " 'array([0.07432424, 0.92567576])}')\n",
+      "(\"diceValueProbability: {'F': [0.40901340437633077, 0.046271663136347174, \"\n",
+      " '0.2354194366806929, 0.1424426793805337, 0.13933564762761563, '\n",
+      " \"0.0275171687984799], 'U': [0.10504556121988455, 0.24793299552075415, \"\n",
+      " '0.068367614020591, 0.09522653248980843, 0.23517267015928273, '\n",
+      " '0.24825462658967914]}')\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainig = BaumWelchTrainigScaled(dataset300)\n",
+    "trainig()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:84: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:85: RuntimeWarning: invalid value encountered in double_scalars\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stop: max iterations\n",
+      "'FITTED'\n",
+      "'Parametrs'\n",
+      "\"TransitionsProbability: {'F': array([nan, nan]), 'U': array([nan, nan])}\"\n",
+      "(\"diceValueProbability: {'F': [nan, nan, nan, nan, nan, nan], 'U': [nan, nan, \"\n",
+      " 'nan, nan, nan, nan]}')\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainig = BaumWelchTrainigScaled(dataset1000)\n",
+    "trainig()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Нормировка не очень помогла -  на каком-то шаге все равно произошло переполнение.  \n",
+    "Попробуем разбить 10 000 состояний на некоторе количество состояний по 300"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset300_10 = []\n",
+    "\n",
+    "casino = Croupier()\n",
+    "for j in range(10):\n",
+    "    dataset300_10.append([])\n",
+    "    for i in range(300):\n",
+    "        data, _ = casino()\n",
+    "        dataset300_10[j].append(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class parametrsMany(parametrs):\n",
+    "    def __init__(self, data):\n",
+    "        parametrs.__init__(self, data)\n",
+    "        self.number = len(data)\n",
+    "        self.L = len(data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class specialForward(parametrsMany):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class specialBackward(parametrsMany):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BaumWelchTrainigMany(parametrsMany, PosteriorDecoding):\n",
+    "    def __init__(self, data):\n",
+    "        #backwardAlgorithm.__init__(self, data)\n",
+    "        #forwardAlgorithm.__init__(self, data)\n",
+    "        PosteriorDecoding.__init__(self, data)\n",
+    "        parametrsMany.__init__(self, data)\n",
+    "        \n",
+    "        #self.epselon = 10**-100\n",
+    "        self.epselon = 0.1\n",
+    "        self.iterationNumber = 100\n",
+    "            \n",
+    "    def __call__(self):\n",
+    "        if self.isFitted == False: self.initializationBaumWelch()\n",
+    "        pprint.pprint('FITTED')\n",
+    "        pprint.pprint('Parametrs')\n",
+    "        pprint.pprint('TransitionsProbability: {}'.format(self.transitionsProbability))\n",
+    "        pprint.pprint('diceValueProbability: {}'.format(self.diceValueProbability))\n",
+    "    \n",
+    "    def initializationBaumWelch(self):\n",
+    "        prLog = 1000000000\n",
+    "        for step in range(self.iterationNumber):\n",
+    "            \n",
+    "            self.initialization()\n",
+    "            \n",
+    "            # Change paramets\n",
+    "            self.changeParametrs()\n",
+    "            currentLog = self.logLikelihood()\n",
+    "            #print(currentLog)\n",
+    "            if abs(currentLog - prLog) < self.epselon:\n",
+    "                print('Log doesnot change: stop in {} iteration'.format(step))\n",
+    "                break\n",
+    "            prLog = currentLog\n",
+    "        else:\n",
+    "            print('Stop: max iterations')\n",
+    "    \n",
+    "    \n",
+    "    def logLikelihood(self):\n",
+    "        return np.log(self.pathProbability)\n",
+    "    \n",
+    "    def changeParametrs(self):\n",
+    "        # Add A\n",
+    "        A = {}\n",
+    "        for fromI, fromState in enumerate(self.states):\n",
+    "            A[fromState] = {}\n",
+    "            for newI, newState in enumerate(self.states):\n",
+    "                sum_step = [\n",
+    "                    self.f[i][fromI] * self.b[i+1][newI] * \n",
+    "                    self.diceValueProbability[newState][self.data[i+1] - 1] \n",
+    "                    for i in range(self.L-1)\n",
+    "                ]\n",
+    "                probability = sum(sum_step) * self.transitionsProbability[fromState][newI]/self.pathProbability\n",
+    "                A[fromState][newState] = probability\n",
+    "        # Add B\n",
+    "        B = {}\n",
+    "        for index, state in enumerate(self.states):\n",
+    "            B[state] = [.0,.0,.0,.0,.0,.0]\n",
+    "            for i,value in enumerate(self.data):\n",
+    "                B[state][value - 1] =+ self.f[i][index] * self.b[i][index]\n",
+    "        \n",
+    "        #pprint.pprint(A)\n",
+    "        #pprint.pprint(B)\n",
+    "        # change\n",
+    "        fair = A['F']['F'] + A['F']['U']\n",
+    "        unfair = A['U']['F'] + A['U']['U']\n",
+    "        \n",
+    "        self.transitionsProbability = {\n",
+    "            'F': np.array([A['F']['F'] /fair  , A['F']['U']/fair]), # to F, to U\n",
+    "            'U': np.array([A['U']['F'] /unfair, A['U']['U']/unfair]) # to F, to U\n",
+    "        }\n",
+    "        \n",
+    "        fair = sum(B['F'])\n",
+    "        unfair = sum(B['U'])\n",
+    "        \n",
+    "        self.diceValueProbability = {\n",
+    "            'F': [value/fair for value in B['F']],\n",
+    "            'U': [value/unfair for value in B['U']]\n",
+    "        }\n",
+    "        \n",
+    "        #pprint.pprint(self.transitionsProbability)\n",
+    "        #pprint.pprint(self.diceValueProbability)"
    ]
   },
   {
