--- a/KhomutovTaskBeatifulOne.ipynb
+++ b/KhomutovTaskBeatifulOne.ipynb
@@ -1943,38 +1943,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "class specialForward(parametrsMany):\n",
-    "    pass"
+    "    def __init__(self, data):\n",
+    "        parametrsMany.__init__(self, data)\n",
+    "        \n",
+    "        self.f = [[] for i in range(self.number)]\n",
+    "        self.pathProbability = []\n",
+    "    \n",
+    "    def stepForward(self, J, index):\n",
+    "        self.f[J].append([])\n",
+    "        previuosState = self.f[J][-2]\n",
+    "        for i,state in enumerate(self.states):\n",
+    "            transitionProbability = np.array([val[i] for val in self.transitionsProbability.values()])\n",
+    "            observedProbability = self.diceValueProbability[state][self.data[J][index] - 1]\n",
+    "            \n",
+    "            \"\"\"\n",
+    "            observedProbability: вероятсность наблюдения при текущем состояние\n",
+    "            transitionProbability: вероятность перехода с кубика на кубик\n",
+    "            \"\"\"\n",
+    "            probability = observedProbability * sum(previuosState * transitionProbability)\n",
+    "            self.f[J][-1].append(probability)\n",
+    "            \n",
+    "    def initializationForward(self):\n",
+    "        for J in range(self.number):\n",
+    "            self.f[J].append([self.startProbability[state] for state in self.states] * \n",
+    "                          np.array([self.diceValueProbability[state][self.data[J][0] - 1] for state in self.states]))\n",
+    "            # Recursion\n",
+    "            for i in range(1,self.L):\n",
+    "                self.stepForward(J,i)\n",
+    "            self.pathProbability.append(sum(self.f[J][-1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "class specialBackward(parametrsMany):\n",
-    "    pass"
+    "    def __init__(self, data):\n",
+    "        parametrsMany.__init__(self, data)\n",
+    "        self.b = [[] for i in range(self.number)]\n",
+    "    \n",
+    "    def stepBackward(self, J, index):\n",
+    "        self.b[J].append([])\n",
+    "        observedProbability =  np.array([val[self.data[J][index]-1] for val in self.diceValueProbability.values()])\n",
+    "        nextState = self.b[J][-2]\n",
+    "        for state in self.states: # first fair then unfair\n",
+    "            transitionProbability = self.transitionsProbability[state]            \n",
+    "            probability = sum(transitionProbability * observedProbability * nextState)\n",
+    "            self.b[J][-1].append(probability)\n",
+    "    \n",
+    "    def initializationBackward(self):\n",
+    "        for J in range(self.number):\n",
+    "            self.b[J].append([1 for state in self.states])\n",
+    "            #Recursion\n",
+    "            for i in range(self.L-1,0,-1):\n",
+    "                self.stepBackward(J,i)\n",
+    "\n",
+    "            # Finish # перевернуть b\n",
+    "            self.b[J] = self.b[J][::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class BaumWelchTrainigMany(parametrsMany, PosteriorDecoding):\n",
+    "class BaumWelchTrainigMany(specialForward, specialBackward):\n",
     "    def __init__(self, data):\n",
-    "        #backwardAlgorithm.__init__(self, data)\n",
-    "        #forwardAlgorithm.__init__(self, data)\n",
-    "        PosteriorDecoding.__init__(self, data)\n",
-    "        parametrsMany.__init__(self, data)\n",
     "        \n",
-    "        #self.epselon = 10**-100\n",
+    "        specialForward.__init__(self, data)\n",
+    "        specialBackward.__init__(self, data)\n",
+    "        \n",
     "        self.epselon = 0.1\n",
     "        self.iterationNumber = 100\n",
     "            \n",
@@ -1989,7 +2035,8 @@
     "        prLog = 1000000000\n",
     "        for step in range(self.iterationNumber):\n",
     "            \n",
-    "            self.initialization()\n",
+    "            self.initializationForward()\n",
+    "            self.initializationBackward()\n",
     "            \n",
     "            # Change paramets\n",
     "            self.changeParametrs()\n",
@@ -2004,7 +2051,7 @@
     "    \n",
     "    \n",
     "    def logLikelihood(self):\n",
-    "        return np.log(self.pathProbability)\n",
+    "        return sum(np.log(self.pathProbability))\n",
     "    \n",
     "    def changeParametrs(self):\n",
     "        # Add A\n",
@@ -2012,19 +2059,25 @@
     "        for fromI, fromState in enumerate(self.states):\n",
     "            A[fromState] = {}\n",
     "            for newI, newState in enumerate(self.states):\n",
-    "                sum_step = [\n",
-    "                    self.f[i][fromI] * self.b[i+1][newI] * \n",
-    "                    self.diceValueProbability[newState][self.data[i+1] - 1] \n",
-    "                    for i in range(self.L-1)\n",
-    "                ]\n",
-    "                probability = sum(sum_step) * self.transitionsProbability[fromState][newI]/self.pathProbability\n",
-    "                A[fromState][newState] = probability\n",
+    "                A[fromState][newState] = 0.0\n",
+    "                for J in range(self.number):\n",
+    "                    sum_step = [\n",
+    "                        self.f[J][i][fromI] * self.b[J][i+1][newI] * \n",
+    "                        self.diceValueProbability[newState][self.data[J][i+1] - 1] \n",
+    "                        for i in range(self.L-1)\n",
+    "                    ]\n",
+    "                    probability = sum(sum_step) * self.transitionsProbability[fromState][newI]/self.pathProbability\n",
+    "                    A[fromState][newState] += probability\n",
+    "                A[fromState][newState] /= self.number\n",
     "        # Add B\n",
     "        B = {}\n",
+    "        \n",
     "        for index, state in enumerate(self.states):\n",
     "            B[state] = [.0,.0,.0,.0,.0,.0]\n",
-    "            for i,value in enumerate(self.data):\n",
-    "                B[state][value - 1] =+ self.f[i][index] * self.b[i][index]\n",
+    "            for J in range(self.number):\n",
+    "                for i,value in enumerate(self.data[J]):\n",
+    "                    B[state][value - 1] =+ self.f[J][i][index] * self.b[J][i][index]\n",
+    "                B[state] = [value/self.number for value in B[state]]\n",
     "        \n",
     "        #pprint.pprint(A)\n",
     "        #pprint.pprint(B)\n",
@@ -2047,6 +2100,30 @@
     "        \n",
     "        #pprint.pprint(self.transitionsProbability)\n",
     "        #pprint.pprint(self.diceValueProbability)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-77-23da3c44120d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtrainig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBaumWelchTrainigMany\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset300_10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtrainig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-76-714cb9781973>\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misFitted\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitializationBaumWelch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m         \u001b[0mpprint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'FITTED'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[0mpprint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Parametrs'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-76-714cb9781973>\u001b[0m in \u001b[0;36minitializationBaumWelch\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[0mcurrentLog\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlogLikelihood\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m             \u001b[1;31m#print(currentLog)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrentLog\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mprLog\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mepselon\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Log doesnot change: stop in {} iteration'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m                 \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
+   "source": [
+    "trainig = BaumWelchTrainigMany(dataset300_10)\n",
+    "trainig()"
    ]
   },
   {
