--- a/KhomutovTaskBeatifulOne.ipynb
+++ b/KhomutovTaskBeatifulOne.ipynb
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1930,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1943,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1951,8 +1951,6 @@
     "    def __init__(self, data):\n",
     "        parametrsMany.__init__(self, data)\n",
     "        \n",
-    "        self.f = [[] for i in range(self.number)]\n",
-    "        self.pathProbability = []\n",
     "    \n",
     "    def stepForward(self, J, index):\n",
     "        self.f[J].append([])\n",
@@ -1960,19 +1958,18 @@
     "        for i,state in enumerate(self.states):\n",
     "            transitionProbability = np.array([val[i] for val in self.transitionsProbability.values()])\n",
     "            observedProbability = self.diceValueProbability[state][self.data[J][index] - 1]\n",
-    "            \n",
-    "            \"\"\"\n",
-    "            observedProbability: вероятсность наблюдения при текущем состояние\n",
-    "            transitionProbability: вероятность перехода с кубика на кубик\n",
-    "            \"\"\"\n",
+    "            #print(observedProbability)\n",
+    "            #print(previuosState)\n",
+    "            #print(J, \" : \",index,\" : \", transitionProbability)\n",
     "            probability = observedProbability * sum(previuosState * transitionProbability)\n",
     "            self.f[J][-1].append(probability)\n",
     "            \n",
     "    def initializationForward(self):\n",
+    "        self.f = [[] for i in range(self.number)]\n",
+    "        self.pathProbability = []\n",
     "        for J in range(self.number):\n",
     "            self.f[J].append([self.startProbability[state] for state in self.states] * \n",
     "                          np.array([self.diceValueProbability[state][self.data[J][0] - 1] for state in self.states]))\n",
-    "            # Recursion\n",
     "            for i in range(1,self.L):\n",
     "                self.stepForward(J,i)\n",
     "            self.pathProbability.append(sum(self.f[J][-1]))"
@@ -1980,14 +1977,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "class specialBackward(parametrsMany):\n",
     "    def __init__(self, data):\n",
     "        parametrsMany.__init__(self, data)\n",
-    "        self.b = [[] for i in range(self.number)]\n",
     "    \n",
     "    def stepBackward(self, J, index):\n",
     "        self.b[J].append([])\n",
@@ -1999,6 +1995,7 @@
     "            self.b[J][-1].append(probability)\n",
     "    \n",
     "    def initializationBackward(self):\n",
+    "        self.b = [[] for i in range(self.number)]\n",
     "        for J in range(self.number):\n",
     "            self.b[J].append([1 for state in self.states])\n",
     "            #Recursion\n",
@@ -2011,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2067,7 +2064,7 @@
     "                        for i in range(self.L-1)\n",
     "                    ]\n",
     "                    probability = sum(sum_step) * self.transitionsProbability[fromState][newI]/self.pathProbability\n",
-    "                    A[fromState][newState] += probability\n",
+    "                    A[fromState][newState] += sum(probability)\n",
     "                A[fromState][newState] /= self.number\n",
     "        # Add B\n",
     "        B = {}\n",
@@ -2076,8 +2073,8 @@
     "            B[state] = [.0,.0,.0,.0,.0,.0]\n",
     "            for J in range(self.number):\n",
     "                for i,value in enumerate(self.data[J]):\n",
-    "                    B[state][value - 1] =+ self.f[J][i][index] * self.b[J][i][index]\n",
-    "                B[state] = [value/self.number for value in B[state]]\n",
+    "                    B[state][value - 1] =+ self.f[J][i][index] * self.b[J][i][index] / self.number\n",
+    "        \n",
     "        \n",
     "        #pprint.pprint(A)\n",
     "        #pprint.pprint(B)\n",
@@ -2098,32 +2095,44 @@
     "            'U': [value/unfair for value in B['U']]\n",
     "        }\n",
     "        \n",
+    "        \n",
+    "        \n",
     "        #pprint.pprint(self.transitionsProbability)\n",
     "        #pprint.pprint(self.diceValueProbability)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-77-23da3c44120d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtrainig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBaumWelchTrainigMany\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset300_10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtrainig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-76-714cb9781973>\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misFitted\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitializationBaumWelch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m         \u001b[0mpprint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'FITTED'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[0mpprint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Parametrs'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-76-714cb9781973>\u001b[0m in \u001b[0;36minitializationBaumWelch\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[0mcurrentLog\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlogLikelihood\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m             \u001b[1;31m#print(currentLog)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrentLog\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mprLog\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mepselon\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Log doesnot change: stop in {} iteration'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m                 \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log doesnot change: stop in 10 iteration\n",
+      "'FITTED'\n",
+      "'Parametrs'\n",
+      "(\"TransitionsProbability: {'F': array([0.13525329, 0.86474671]), 'U': \"\n",
+      " 'array([0.11789424, 0.88210576])}')\n",
+      "(\"diceValueProbability: {'F': [3.786416374328775e-06, 0.0018100732823648207, \"\n",
+      " '0.9967844294861312, 0.0003878852157891692, 0.0010046376876953857, '\n",
+      " \"9.187911645088862e-06], 'U': [0.19987235495958233, 0.19951247279176182, \"\n",
+      " '0.0012751191475109385, 0.199795827630954, 0.19967294669726762, '\n",
+      " '0.19987127877292332]}')\n"
      ]
     }
    ],
    "source": [
     "trainig = BaumWelchTrainigMany(dataset300_10)\n",
     "trainig()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Результаты занятны: в этом случае алгоритм счтает что вероятность перехода на первый кубик составляет 10 процентов, и первый кубик используется только для генерации одного числа - в этом случае 3."
    ]
   },
   {
