give right values

--- a/KhomutovTaskBeatifulOne.ipynb
+++ b/KhomutovTaskBeatifulOne.ipynb
@@ -1670,7 +1670,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class parametrs:\n",
+    "    def __init__(self, data):\n",
+    "        \n",
+    "        self.isFitted = False\n",
+    "        \n",
+    "        self.data = data\n",
+    "        self.L = len(data)\n",
+    "        \n",
+    "        self.states = ['F','U'] # F for Fair state, U for Unfair state\n",
+    "        self.transitionsProbability = {\n",
+    "            'F': np.array([0.95,0.05]), # to F, to U\n",
+    "            'U': np.array([0.1,0.9]) # to F, to U\n",
+    "        }\n",
+    "        \n",
+    "        self.startProbability = {\n",
+    "            'F': 2/3,\n",
+    "            'U': 1/3\n",
+    "        }\n",
+    "        \n",
+    "        self.diceValues = [1,2,3,4,5,6]\n",
+    "        self.diceValueProbability = {\n",
+    "            'F': [1/6,1/6,1/6,1/6,1/6,1/6],\n",
+    "            'U': [1/10,1/10,1/10,1/10,1/10,1/2]\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1760,26 +1792,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LOG: -525.1847302403568\n",
-      "LOG: -537.5793572187974\n",
-      "LOG: -537.5588257195948\n",
-      "Log doesnot change: stop in 2 iteration\n",
+      "LOG: -521.3710107893718\n",
+      "LOG: -536.6221525489796\n",
+      "LOG: -535.6165229487498\n",
+      "LOG: -540.0633727340736\n",
+      "LOG: -545.4557235634788\n",
+      "LOG: -541.9615036839\n",
+      "LOG: -537.4199131163359\n",
+      "LOG: -535.0159797901456\n",
+      "LOG: -534.7264631010098\n",
+      "LOG: -535.2136199876385\n",
+      "LOG: -535.904941220778\n",
+      "LOG: -536.5207111620745\n",
+      "LOG: -536.9546787193445\n",
+      "LOG: -537.235313352473\n",
+      "LOG: -537.4234196423912\n",
+      "LOG: -537.5588565974913\n",
+      "LOG: -537.6604194130174\n",
+      "LOG: -537.7369172540974\n",
+      "Log doesnot change: stop in 17 iteration\n",
       "'FITTED'\n",
       "'Parametrs'\n",
-      "(\"TransitionsProbability: {'F': array([0.76383046, 0.23616954]), 'U': \"\n",
-      " 'array([0.07511366, 0.92488634])}')\n",
-      "(\"diceValueProbability: {'F': [0.16173783955501755, 0.17901899403200064, \"\n",
-      " '0.15234369956749744, 0.18905926559712238, 0.16492250412682014, '\n",
-      " \"0.15291769712154188], 'U': [0.16819039681278067, 0.1628479866531713, \"\n",
-      " '0.17109456325472552, 0.15974407083052258, 0.16720586858661343, '\n",
-      " '0.17091711386218633]}')\n"
+      "(\"TransitionsProbability: {'F': array([0.99671975, 0.00328025]), 'U': \"\n",
+      " 'array([9.99703137e-01, 2.96862657e-04])}')\n",
+      "(\"diceValueProbability: {'F': [0.16745269527262713, 0.16745285267272883, \"\n",
+      " '0.16273590865837056, 0.1674528418311311, 0.16745285344034672, '\n",
+      " \"0.1674528481247956], 'U': [3.4488875445079065e-05, 1.1212326798036443e-06, \"\n",
+      " '0.9999579264577751, 3.4195702068635916e-06, 9.585034309479675e-07, '\n",
+      " '2.0853604621769464e-06]}')\n"
      ]
     }
    ],
